fixed flex wrapping on portfolio page

--- a/portfolio-website/src/app/components/portfolio/portfolio.component.scss
+++ b/portfolio-website/src/app/components/portfolio/portfolio.component.scss
@@ -11,6 +11,7 @@
 .portfolio-element-container{
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
